<resources>
    <string name="app_name">DeeplinkWebviewApp</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_system_parameters">SystemParametersActivity</string>
    <string-array name="sf_stage_array">
        <item>Rhein</item>
        <item>Beta</item>
        <item>Prod</item>
    </string-array>
    <string name="default_blz">94059421</string>
    <string name="default_stage">Beta</string>
    <string name="default_mka">si01a</string>
    <string name="default_username">royb</string>
    <string name="default_pin">12369</string>
    <string name="default_app">Sparkasse</string>
    <string name="default_last_login">1971-01-01T00:00:00Z</string>
    <string name="default_deeplink_url">https://www.fsiebecke.de/deeplinks.html</string>
    <string name="greensmilies_url">https://www.greensmilies.com/test/tel.html</string>
    <string-array name="app_array">
        <item>Sparkasse</item>
        <item>Sparkasse Business</item>
        <item>S-Invest</item>
    </string-array>
    <string name="title_activity_log">LogActivity</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="default_notification_channel_name">Allgemein</string>
    <string name="default_notification_channel_description">Benachrichtigungen ohne besonderen Bezug</string>
    <string name="system_notification_channel_id">system_channel</string>
    <string name="system_notification_channel_name">System</string>
    <string name="system_notification_channel_description">Benachrichtigungen für Aktualisierungen und Sicherheit</string>
    <string name="account_alert_notification_channel_id">account_alert_channel</string>
    <string name="account_alert_notification_channel_name">Kontowecker</string>
    <string name="account_alert_notification_channel_description">Benachrichtigungen für selbst erstellte Kontowecker</string>
    <string name="iam_notification_channel_id">iam_channel</string>
    <string name="iam_notification_channel_name">Individuelle Angebote</string>
    <string name="iam_notification_channel_description">Benachrichtigungen für Aktualisierungen und Sicherheit</string>
    <string name="disrupter_image">Disrupter image</string>
    <string name="header_text">HEADER TEXT</string>
    <string name="subtitle_text">SUBTITLE TEXT</string>
    <string name="no_interest">Kein Interesse</string>
    <string name="remind_later">Später erinnern</string>
    <string name="link1">LINK 1</string>
    <string name="link2">LINK 2</string>
    <string name="link3">LINK 3</string>
    <string name="app_password"></string>
    <string name="user_agent_string">Mozilla/5.0 (Linux; Android 10; Pixel 8 XL Build/QP1A.191205.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3987.149 Mobile Safari/537.36 SFG-sapp-8.0.0_99999
</string>
    <string name="user_agent_string_webview">Mozilla/5.0 (iPhone; CPU iPhone OS 17_2_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 SparkasseWKWebView SFGAPP-sapp-6.8.0-32750</string>
    <string name="deeplink_root_uri">https://www.fsiebecke.de/</string>
    <string name="servlet_url">URL to Silent Login Servlet</string>
    <string name="dashboard">Start</string>
    <string name="products">Produkte</string>
    <string name="services">Service</string>
    <string name="profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_dashboard_fragment">Dashboard Fragment</string>
    <string name="hello_profile_fragment">Profile Fragment</string>
    <string name="hello_service_fragment">Service Fragment</string>
    <string name="hello_products_fragment">Products Fragment</string>
    <string name="profile_entry_name_log">Kommunikationsprotokoll</string>
    <string name="profile_entry_name_logout">Logout</string>
    <string name="ad_banner">overview banner</string>
    <string name="show_promoted_product">Klick hier für ein cooles Angebot!</string>
    <string name="profile_image">Beraterbild</string>
    <string name="profile_entry_name_account_settings">Konto</string>
    <string name="profile_entry_name_feature_settings">Features</string>
    <string name="profile_entry_name_system_settings">System</string>
    <string name="profile_entry_name_notification_settings">Benachrichtigungen</string>
    <string name="title_activity_account_setings">Konto</string>
    <string name="featureSettings">Feature-Einstellungen</string>
    <string name="systemSettings">Systemeinstellungen</string>
    <string name="accountSettings">Kontoeinstellungen</string>
    <string name="notificationSettings">Benachrichtigungs-Einstellungen</string>
</resources>